--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <log4j.version>2.14.1</log4j.version>
     <slf4j.version>1.7.30</slf4j.version>
     <tomcat.version>9.0.46</tomcat.version>
+    <cose-java.version>1.1.0</cose-java.version>
 
     <!-- Maven Version -->
     <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
