--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -59,5 +59,12 @@
       <artifactId>logging-utils</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.augustcellars.cose</groupId>
+      <artifactId>cose-java</artifactId>
+      <version>${cose-java.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
